--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,31 @@ ATP_SYSTEM__ENVIRONMENT=development
 ATP_SYSTEM__LOG_LEVEL=INFO
 ATP_SYSTEM__EVENT_BUS_BACKEND=asyncio
 ATP_SYSTEM__REDIS_URL=
+ATP_SYSTEM__DATA_STORE_PATH=./data_store
+
+# MetaTrader 5
+MT5_LOGIN=12345678
+MT5_PASSWORD=your_password
+MT5_SERVER=ICMarkets-Demo
+
+# IQ Option
+IQ_EMAIL=your@email.com
+IQ_PASSWORD=your_password
+
+# InvertirOnLine (IOL)
+IOL_USERNAME=your_username
+IOL_PASSWORD=your_password
+
+# Binance
+BINANCE_API_KEY=your_api_key
+BINANCE_SECRET=your_secret
+
+# FX Pro
+FXPRO_API_KEY=your_key
+FXPRO_ACCOUNT_ID=12345
+
+# Redis (optional L2 cache)
+REDIS_URL=redis://localhost:6379/0
+
+# Storage
+DATA_STORE_PATH=./data_store
