--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,11 @@ __pycache__/
 .mypy_cache/
 .ruff_cache/
 .venv/
+.env
 *.egg-info/
 logs/
 snapshots/
 data_store/
 *.db
 *.jsonl
+tests/validation/charts/
