--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,11 @@ ATP_SYSTEM__LOG_LEVEL=INFO
 ATP_SYSTEM__EVENT_BUS_BACKEND=asyncio
 ATP_SYSTEM__REDIS_URL=
 ATP_SYSTEM__DATA_STORE_PATH=./data_store
+ATP_RISK__ENABLED=false
+ATP_RISK__DEFAULT_RISK_PER_TRADE_PCT=1.0
+ATP_RISK__MAX_RISK_PER_TRADE_PCT=2.0
+ATP_RISK__PAPER__INITIAL_BALANCE=10000.0
+ATP_RISK__KILL_SWITCH__AUTO_CLOSE_POSITIONS=false
 
 # MetaTrader 5
 MT5_LOGIN=12345678
