--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,12 @@ signals = [
   "vectorbt>=0.26,<0.27",
   "python-telegram-bot>=21,<22",
 ]
+backtest = [
+  "jinja2>=3.1,<4",
+  "optuna>=3.6,<5",
+  "pyfolio-reloaded>=0.9,<1",
+  "weasyprint>=62,<67",
+]
 parquet = [
   "pyarrow>=16,<18",
   "fastparquet>=2024.2,<2026",
@@ -99,6 +105,8 @@ packages = [
   "risk",
   "execution",
   "execution.adapters",
+  "backtest",
+  "replay",
 ]
 
 [tool.ruff]
@@ -146,6 +154,15 @@ module = [
   "redis.*",
   "ccxt",
   "ccxt.*",
+  "jinja2",
+  "optuna",
+  "plotly",
+  "plotly.*",
+  "pyfolio",
+  "pyfolio.*",
+  "weasyprint",
+  "matplotlib",
+  "matplotlib.*",
   "MetaTrader5",
   "iqoptionapi",
   "iqoptionapi.*",
